Prevent status bar from painting synchronously to prevent flicker. b=129844 r=jkeiser sr=kin